--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Live Chat Box</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage-compat.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 </head>
 <body>
-
-<div id="chat-container">
-  <div id="header">
-    <h3>CHAT BOX</h3>
-    <button onclick="logout()">Logout</button>
+  <div id="login-container">
+    <button id="login-btn">Login with Google</button>
   </div>
 
-  <div id="messages"></div>
-
-  <div id="input-area">
-    <label for="media-upload" id="attach-btn">📎</label>
-    <input type="file" id="media-upload" accept="image/*" style="display: none">
-    <textarea id="message-input" placeholder="Type a message..."></textarea>
-    <button id="send-btn">➤</button>
+  <div id="chat-container" style="display:none;">
+    <div id="chat-messages"></div>
+    <div id="chat-input-area">
+      <textarea id="message-input" placeholder="Type a message..."></textarea>
+      <button id="send-btn">&#9658;</button>
+    </div>
   </div>
-</div>
 
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
