--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
 <body>
-  <div id="login-container">
-    <button id="login-btn">Login with Google</button>
+  <div id="login-container" class="login-popup">
+    <div class="login-card">
+      <h2>Welcome to SPN Chat</h2>
+      <button id="login-btn">
+        <img src="https://img.icons8.com/color/16/000000/google-logo.png" />
+        Sign in with Google
+      </button>
+    </div>
   </div>
 
   <div id="chat-container" style="display: none;">
