--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SPN Chat</title>
+  <title>24Sports Chat</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="style.css?v=11">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="login-container">
@@ -16,18 +16,17 @@
     <button id="guest-btn">Continue as Guest</button>
   </div>
 
-  <div id="chat-container">
+  <div id="chat-container" style="display: none;">
     <div id="chat-messages"></div>
-    <div id="typing-indicator"></div>
-    <div id="input-area">
-      <textarea id="message-input" placeholder="Type a message..."></textarea>
+    <div id="message-box">
+      <input type="text" id="message-input" placeholder="Type a message..." />
       <button id="send-btn"><span class="material-icons">send</span></button>
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script src="app.js?v=11"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
