--- a/index.html
+++ b/index.html
@@ -2,40 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>24Sports Chat</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Live Chat</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
 <body>
   <div id="login-container">
     <h2>Join the Chat</h2>
+    <input type="text" id="guest-name" placeholder="Enter nickname" />
+    <button id="join-btn">Continue as Guest</button>
+    <hr>
     <button id="login-btn">Sign in with Google</button>
-    <div style="margin: 10px 0;">or</div>
-    <div style="display: flex; gap: 8px;">
-      <input type="text" id="guest-name" placeholder="Enter nickname" maxlength="15" />
-      <button id="join-btn">Join the Chat</button>
-    </div>
   </div>
 
-  <div id="chat-container" style="display: none;">
+  <div id="chat-container">
     <div id="chat-messages"></div>
-    <div id="typing-indicator" style="padding: 5px 15px; font-size: 12px; color: #ccc;"></div>
+    <div id="typing-indicator"></div>
     
-    <div id="reply-box" style="display: none;">
+    <div id="reply-box">
       <span id="reply-text"></span>
-      <button id="cancel-reply" class="material-icons">close</button>
+      <span id="cancel-reply" class="material-icons">close</span>
     </div>
 
     <div id="message-box">
-      <input type="text" id="message-input" placeholder="Type a message..." />
-      <button id="send-btn"><span class="material-icons">send</span></button>
+      <textarea id="message-input" placeholder="Type a message"></textarea>
+      <button id="send-btn" class="material-icons">send</button>
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
