--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Live Chat</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>SPN Chat</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <link rel="stylesheet" href="style.css?v=11">
 </head>
 <body>
   <div id="login-container">
+    <h2>Join the Chat</h2>
     <button id="login-btn">Sign in with Google</button>
+    <div>or</div>
+    <input type="text" id="guest-name" placeholder="Enter nickname" maxlength="15" />
+    <button id="guest-btn">Continue as Guest</button>
   </div>
 
-  <div id="chat-container" style="display:none;">
+  <div id="chat-container">
     <div id="chat-messages"></div>
     <div id="typing-indicator"></div>
-    <div id="reply-box" style="display:none;"></div>
-    <div id="input-bar">
-      <textarea id="message-input" placeholder="Type a message"></textarea>
-      <button id="send-btn">
-        <span class="material-icons">send</span>
-      </button>
+    <div id="input-area">
+      <textarea id="message-input" placeholder="Type a message..."></textarea>
+      <button id="send-btn"><span class="material-icons">send</span></button>
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="app.js?v=11"></script>
 </body>
 </html>
