--- a/index.html
+++ b/index.html
@@ -3,31 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SPN Chat</title>
+  <title>24Sports Live Chat</title>
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="style.css?v=11">
 </head>
 <body>
   <div id="login-container">
-    <h2>Join the Chat</h2>
-    <button id="login-btn">Sign in with Google</button>
-    <div>or</div>
-    <input type="text" id="guest-name" placeholder="Enter nickname" maxlength="15" />
-    <button id="guest-btn">Continue as Guest</button>
+    <button id="login-btn"><span class="material-icons">login</span> Sign in with Google</button>
   </div>
 
-  <div id="chat-container">
+  <div id="chat-container" style="display: none;">
     <div id="chat-messages"></div>
-    <div id="typing-indicator"></div>
-    <div id="input-area">
+
+    <div id="reply-preview" class="reply-preview" style="display: none;">
+      Replying to <span id="reply-to-name"></span>: <span id="reply-to-text"></span>
+      <span class="material-icons close-reply" onclick="cancelReply()">close</span>
+    </div>
+
+    <div class="chat-input-area">
       <textarea id="message-input" placeholder="Type a message..."></textarea>
       <button id="send-btn"><span class="material-icons">send</span></button>
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script src="app.js?v=11"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
