--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <div id="chat-container" style="display: none;">
     <div id="chat-messages"></div>
 
+    <div id="typing-indicator" style="padding: 4px 16px; font-size: 12px; color: #aaa; display: none;"></div>
+
     <div id="reply-preview" class="reply-preview" style="display: none;">
       Replying to <span id="reply-to-name"></span>: <span id="reply-to-text"></span>
       <span class="material-icons close-reply" onclick="cancelReply()">close</span>
